[gd_scene load_steps=7 format=3 uid="uid://chxsm2ii2oe4q"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_wdgh8"]
[ext_resource type="Texture2D" uid="uid://dw3puxn5uc2m3" path="res://assets/environment-preview.png" id="2_bbcp8"]
[ext_resource type="Theme" uid="uid://bdlaygt1f2hhj" path="res://scenes/themes/theme_menu.tres" id="3_kdign"]
[ext_resource type="FontFile" uid="uid://de8gqdkggm2s" path="res://coins_and_stuff/Pixel Game.otf" id="4_wfgrw"]
[ext_resource type="Texture2D" uid="uid://dhq71ntodn2sv" path="res://assets/sprites/player/player-run/player-run-4.png" id="5_3vsbj"]
[ext_resource type="Texture2D" uid="uid://bp7rhxkso4ya7" path="res://assets/sprites/enemies/crab-idle/crab-idle-2.png" id="6_u3ljw"]

[node name="settings" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_wdgh8")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.387428, 0.000116188, 0.393874, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -481.0
offset_right = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bbcp8")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_kdign")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="window_mode" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="resolution" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="exit" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_wfgrw")
theme_override_font_sizes/font_size = 32
text = "EXIT"

[node name="Player-run-4" type="Sprite2D" parent="."]
position = Vector2(592, 634)
texture = ExtResource("5_3vsbj")

[node name="Crab-idle-2" type="Sprite2D" parent="."]
position = Vector2(658, 640)
texture = ExtResource("6_u3ljw")

[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/window_mode" to="." method="_on_window_mode_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
